--- a/src/sass/common/_colors.scss
+++ b/src/sass/common/_colors.scss
@@ -28,8 +28,8 @@ $popover_bg_color: $menu_color;
 $popover_hover_color: $menu_selected_color;
 
 $scrollbar_bg_color: $base_color;
-$scrollbar_slider_color: mix($fg_color, $bg_color, if($variant=='light', 30%, 15%));
-$scrollbar_slider_hover_color: mix($fg_color, $bg_color, if($variant=='light', 35%, 20%));
+$scrollbar_slider_color: mix($fg_color, $bg_color, 60%);
+$scrollbar_slider_hover_color: mix($fg_color, $bg_color, 80%);
 $scrollbar_slider_active_color: $selected_bg_color;
 
 $warning_color: #fd7d00;
@@ -73,7 +73,7 @@ $backdrop_borders_color: $borders_color;
 $backdrop_dark_fill: mix($backdrop_borders_color, $backdrop_bg_color, 35%);
 $backdrop_sidebar_bg_color: mix($backdrop_bg_color, $backdrop_base_color, 50%);
 
-$backdrop_scrollbar_bg_color: $scrollbar_bg_color;
+$backdrop_scrollbar_bg_color: darken($backdrop_bg_color, 3%);
 $backdrop_scrollbar_slider_color: mix($backdrop_fg_color, $backdrop_bg_color, 40%);
 
 $backdrop_menu_color: if($variant == 'light', $backdrop_base_color, mix($backdrop_bg_color, $backdrop_base_color, 20%));
