--- a/src/sass/gtk3/_applications.scss
+++ b/src/sass/gtk3/_applications.scss
@@ -130,6 +130,16 @@ filechooser,
   }
 }
 
+/* GNOME TERMINAL */
+terminal-window,
+.mate-terminal {
+  notebook {
+    scrollbar {
+      background: none;
+    }
+  }
+}
+
 /* GNOME TWEAKS */
 list.tweak-categories separator {
   background: transparent;
