--- a/src/sass/cinnamon/_common.scss
+++ b/src/sass/cinnamon/_common.scss
@@ -1,4 +1,6 @@
 
+$asset_suffix: if($variant=='dark', '-dark', '');
+
 stage {
   color: $fg_color;
 }
@@ -226,11 +228,11 @@ StScrollBar {
 // Tooltip
 //
 #Tooltip {
-  border: 1px solid $tooltip_border_color;
+  background-color: transparentize(black, 0.2);
+  border: 1px solid $tooltip_borders_color;
   border-radius: 6px;
-  padding: 5px 12px;
-  background-color: $tooltip_bg_color;
-  color: $tooltip_fg_color;
+  padding: 8px 12px;
+  color: white;
   font-size: 1em;
   font-weight: normal;
   text-align: center;
@@ -256,7 +258,7 @@ StScrollBar {
   border: 1px solid $borders_color;
   border-radius: 6px;
   margin: 10px 5px;
-  background-color: transparentize($base_color, if($transparency=='true', .075, 0));
+  background-color: $base_color;
 }
 
 .popup-sub-menu {
@@ -708,6 +710,175 @@ StScrollBar {
   spacing-columns: 0px;
 }
 
+.calendar-main-box {
+  margin: 0 .8em .5em .8em;
+}
+
+.calendar-events-main-box {
+  height: 300px;
+  margin-right: .5em;
+  border-radius: 6px;
+  padding: .5em;
+  min-width: 350px;
+  border: 1px solid $borders_color;
+  background-color: $base_color;
+}
+
+.calendar-events-no-events-box {
+}
+
+.calendar-events-no-events-button {
+  margin: 6px 0 6px 0;
+  padding: 6px;
+  border-radius: 6px;
+
+  &:hover {
+    background-color: $selected_bg_color;
+
+    .calendar-events-no-events-icon,
+    .calendar-events-no-events-label {
+      color: $selected_fg_color;
+    }
+  }
+}
+
+.calendar-events-no-events-icon,
+.calendar-events-no-events-label {
+  font-weight: bold;
+  color: $fg_color;
+  text-align: center;
+}
+
+.calendar-events-date-label {
+  padding: .1em .1em .5em .1em;
+  color: $fg_color;
+  font-weight: bold;
+  text-align: center;
+}
+
+.calendar-events-event-container {
+  padding: 0;
+}
+
+.calendar-event-button {
+  border: 1px solid rgba(0,0,0,0);
+
+  .calendar-event-time-past {
+    color: transparentize($fg_color, 0.6);
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em;
+  }
+  .calendar-event-time-present {
+    color: $fg_color;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em;
+
+    &:all-day {
+      color: $selected_bg_color;
+    }
+  }
+  .calendar-event-time-future {
+    color: $fg_color;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em;
+  }
+
+  .calendar-event-summary {
+    color: $fg_color;
+    text-align: left;
+    width: 200px;
+  }
+
+  .calendar-event-countdown {
+    text-align: right;
+    margin-bottom: .6em;
+    color: $fg_color;
+
+    &:soon {
+      font-weight: bold;
+    }
+    &:imminent {
+      font-weight: bold;
+      color: $warning_color;
+    }
+    &:current {
+      font-weight: bold;
+      color: $selected_bg_color;
+    }
+  }
+
+  &:hover {
+    background-color: $selected_bg_color;
+    border: 1px solid $borders_color;
+    .calendar-event-time-past,
+    .calendar-event-time-present,
+    .calendar-event-time-future,
+    .calendar-event-summary {
+      color: $selected_fg_color
+    }
+
+    .calendar-event-countdown {
+      text-align: right;
+      margin-bottom: .6em;
+      color: $selected_fg_color;
+
+      &:soon {
+        font-weight: bold;
+      }
+      &:imminent {
+        font-weight: bold;
+      }
+      &:current {
+        font-weight: bold;
+      }
+    }
+  }
+}
+
+.calendar-event-row-content {
+}
+
+.calendar-event-color-strip {
+    width: 2px;
+}
+
+.calendar-today-home-button {
+  padding: 6px;
+}
+
+.calendar-today-day-label {
+  font-size: 1.75em;
+  color: $fg_color;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: .1em;
+}
+
+.calendar-today-date-label {
+  font-size: 1.1em;
+  color: $fg_color;
+  font-weight: bold;
+  text-align: center;
+}
+
+.calendar-today-home-button-enabled {
+  padding: 6px;
+
+  &:hover {
+    background-color: $selected_bg_color;
+
+    .calendar-today-day-label {
+      color: $selected_fg_color
+    }
+    .calendar-today-date-label {
+      color: $selected-fg-color
+    }
+  }
+}
+
 .calendar-month-label {
   color: $fg_color;
   font-weight: bold;
@@ -754,6 +925,18 @@ StScrollBar {
   }
 }
 
+.calendar-day-event-dot-box {
+  margin-top: 1.7em;
+  max-rows: 1;
+}
+
+.calendar-day-event-dot {
+  margin: 1px;
+  border-radius: 2px;
+  width: 4px;
+  height: 4px;
+}
+
 .datemenu-date-label {
   padding: .4em 1.75em;
   font-weight: bold;
@@ -769,7 +952,12 @@ StScrollBar {
   width: 2.2em;
   height: 2.2em;
   padding: 0.1em;
-  border-radius: 999px;
+
+  &:hover {
+    font-weight: bold;
+    color: $selected_fg_color;
+    background-color: $selected_bg_color;
+  }
 }
 
 .calendar-day-heading {
@@ -803,13 +991,37 @@ StScrollBar {
 .calendar-today:hover {
   font-weight: bold;
   color: $selected_fg_color;
-  background-color: $selected_bg_color;
+  background-color: if($variant == 'light', transparentize($fg_color, 0.7), transparentize($fg_color, 0.6));
+  border-radius: 99px;
   border-width: 0;
+  &:selected {
+    background-color: $selected_bg_color;
+  }
+}
+
+.calendar-not-today {
+  color: $fg_color;
+  border-radius: 99px;
+
+  &:selected {
+    font-weight: bold;
+    background-color: if($variant == 'light', transparentize($fg_color, 0.7), transparentize($fg_color, 0.6));
+
+    &:hover {
+      font-weight: bold;
+      color: $fg_color;
+    }
+  }
 }
 
 .calendar-other-month-day {
   color: transparentize($fg_color, 0.7);
+  border-radius: 99px;
   opacity: 1;
+  &:hover {
+    color: $selected_fg_color;
+    opacity: 1;
+  }
 }
 
 .calendar-week-number {
@@ -978,7 +1190,7 @@ StScrollBar {
   background-color: $bg_color;
   border: 1px solid $borders_color;
   border-radius: 6px;
-  padding: 0;
+  padding: 5px 10px;
 
   > StBoxLayout:first-child {
     padding: 10px;
@@ -999,6 +1211,13 @@ StScrollBar {
       @extend %button;
     }
   }
+
+  .confirm-dialog-title {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.3em;
+    padding-bottom: 12px;
+  }
 }
 
 //
@@ -1013,10 +1232,19 @@ StScrollBar {
   > * { padding: 0; }
 
   &-label {
-    font-size: 0;
+    font-size: 1.3em;
     font-weight: bold;
     color: $fg_color;
-    padding-bottom: 0;
+    padding-bottom: 15px;
+    text-align: center;
+  }
+
+  &-description {
+    color: $fg_color;
+    padding-top: 15px;
+    text-align: center;
+
+    &.error { color: $error_color; }
   }
 
   &-error-label { color: $error_color; }
@@ -1032,6 +1260,7 @@ StScrollBar {
   }
   &-entry {
     width: 21em;
+    height: 1.2em;
     padding: 7px;
     border-radius: 6px;
     caret-color: $osd_fg_color;
@@ -1112,7 +1341,7 @@ StScrollBar {
 .magnifier-zoom-region {
   border: 2px solid rgba(128, 0, 0, 1);
 
-  &.full-screen { border-width: 0px; }
+  .full-screen { border-width: 0px; }
 }
 
 //
@@ -1504,12 +1733,12 @@ StScrollBar {
 
   &-number-label {
     z-index: 99;
-    color: $tooltip_border_color;
+    color: $tooltip_borders_color;
   }
 
   &-badge {
     border-radius: 256px;
-    background-color: $tooltip_fg_color;
+    background-color: #4a4a4a;
   }
 
   &-button-label {
