--- a/themes/Flat-Remix-GTK-Cyan-Dark/cinnamon/cinnamon.css
+++ b/themes/Flat-Remix-GTK-Cyan-Dark/cinnamon/cinnamon.css
@@ -210,11 +210,11 @@ StScrollBar {
     color: #86f3f8; }
 
 #Tooltip {
-  border: 1px solid #d0d0d0;
+  background-color: rgba(0, 0, 0, 0.8);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   border-radius: 6px;
-  padding: 5px 12px;
-  background-color: #fbeaa0;
-  color: #4a4a4a;
+  padding: 8px 12px;
+  color: white;
   font-size: 1em;
   font-weight: normal;
   text-align: center; }
@@ -232,7 +232,7 @@ StScrollBar {
   border: 1px solid #13151a;
   border-radius: 6px;
   margin: 10px 5px;
-  background-color: rgba(39, 42, 52, 0.925); }
+  background-color: #272a34; }
 
 .popup-sub-menu {
   background-color: #272a34;
@@ -606,6 +606,125 @@ StScrollBar {
   spacing-rows: 0px;
   spacing-columns: 0px; }
 
+.calendar-main-box {
+  margin: 0 .8em .5em .8em; }
+
+.calendar-events-main-box {
+  height: 300px;
+  margin-right: .5em;
+  border-radius: 6px;
+  padding: .5em;
+  min-width: 350px;
+  border: 1px solid #13151a;
+  background-color: #272a34; }
+
+.calendar-events-no-events-button {
+  margin: 6px 0 6px 0;
+  padding: 6px;
+  border-radius: 6px; }
+  .calendar-events-no-events-button:hover {
+    background-color: #0ccfd9; }
+    .calendar-events-no-events-button:hover .calendar-events-no-events-icon,
+    .calendar-events-no-events-button:hover .calendar-events-no-events-label {
+      color: #000000; }
+
+.calendar-events-no-events-icon,
+.calendar-events-no-events-label {
+  font-weight: bold;
+  color: #eeeeec;
+  text-align: center; }
+
+.calendar-events-date-label {
+  padding: .1em .1em .5em .1em;
+  color: #eeeeec;
+  font-weight: bold;
+  text-align: center; }
+
+.calendar-events-event-container {
+  padding: 0; }
+
+.calendar-event-button {
+  border: 1px solid rgba(0, 0, 0, 0); }
+  .calendar-event-button .calendar-event-time-past {
+    color: rgba(238, 238, 236, 0.4);
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em; }
+  .calendar-event-button .calendar-event-time-present {
+    color: #eeeeec;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em; }
+    .calendar-event-button .calendar-event-time-present:all-day {
+      color: #0ccfd9; }
+  .calendar-event-button .calendar-event-time-future {
+    color: #eeeeec;
+    font-weight: bold;
+    text-align: left;
+    margin-bottom: .2em; }
+  .calendar-event-button .calendar-event-summary {
+    color: #eeeeec;
+    text-align: left;
+    width: 200px; }
+  .calendar-event-button .calendar-event-countdown {
+    text-align: right;
+    margin-bottom: .6em;
+    color: #eeeeec; }
+    .calendar-event-button .calendar-event-countdown:soon {
+      font-weight: bold; }
+    .calendar-event-button .calendar-event-countdown:imminent {
+      font-weight: bold;
+      color: #fd7d00; }
+    .calendar-event-button .calendar-event-countdown:current {
+      font-weight: bold;
+      color: #0ccfd9; }
+  .calendar-event-button:hover {
+    background-color: #0ccfd9;
+    border: 1px solid #13151a; }
+    .calendar-event-button:hover .calendar-event-time-past,
+    .calendar-event-button:hover .calendar-event-time-present,
+    .calendar-event-button:hover .calendar-event-time-future,
+    .calendar-event-button:hover .calendar-event-summary {
+      color: #000000; }
+    .calendar-event-button:hover .calendar-event-countdown {
+      text-align: right;
+      margin-bottom: .6em;
+      color: #000000; }
+      .calendar-event-button:hover .calendar-event-countdown:soon {
+        font-weight: bold; }
+      .calendar-event-button:hover .calendar-event-countdown:imminent {
+        font-weight: bold; }
+      .calendar-event-button:hover .calendar-event-countdown:current {
+        font-weight: bold; }
+
+.calendar-event-color-strip {
+  width: 2px; }
+
+.calendar-today-home-button {
+  padding: 6px; }
+
+.calendar-today-day-label {
+  font-size: 1.75em;
+  color: #eeeeec;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: .1em; }
+
+.calendar-today-date-label {
+  font-size: 1.1em;
+  color: #eeeeec;
+  font-weight: bold;
+  text-align: center; }
+
+.calendar-today-home-button-enabled {
+  padding: 6px; }
+  .calendar-today-home-button-enabled:hover {
+    background-color: #0ccfd9; }
+    .calendar-today-home-button-enabled:hover .calendar-today-day-label {
+      color: #000000; }
+    .calendar-today-home-button-enabled:hover .calendar-today-date-label {
+      color: #000000; }
+
 .calendar-month-label {
   color: #eeeeec;
   font-weight: bold;
@@ -642,6 +761,16 @@ StScrollBar {
     .calendar-change-month-forward:rtl:active {
       background-image: url("assets/calendar-arrow-left.svg"); }
 
+.calendar-day-event-dot-box {
+  margin-top: 1.7em;
+  max-rows: 1; }
+
+.calendar-day-event-dot {
+  margin: 1px;
+  border-radius: 2px;
+  width: 4px;
+  height: 4px; }
+
 .datemenu-date-label {
   padding: .4em 1.75em;
   font-weight: bold;
@@ -655,8 +784,11 @@ StScrollBar {
   text-align: center;
   width: 2.2em;
   height: 2.2em;
-  padding: 0.1em;
-  border-radius: 999px; }
+  padding: 0.1em; }
+  .calendar-day-base:hover {
+    font-weight: bold;
+    color: #000000;
+    background-color: #0ccfd9; }
 
 .calendar-day-heading {
   color: rgba(238, 238, 236, 0.85);
@@ -684,12 +816,32 @@ StScrollBar {
 .calendar-today:hover {
   font-weight: bold;
   color: #000000;
-  background-color: #0ccfd9;
+  background-color: rgba(238, 238, 236, 0.4);
+  border-radius: 99px;
   border-width: 0; }
+  .calendar-today:selected,
+  .calendar-today:active:selected,
+  .calendar-today:focus:selected,
+  .calendar-today:hover:selected {
+    background-color: #0ccfd9; }
+
+.calendar-not-today {
+  color: #eeeeec;
+  border-radius: 99px; }
+  .calendar-not-today:selected {
+    font-weight: bold;
+    background-color: rgba(238, 238, 236, 0.4); }
+    .calendar-not-today:selected:hover {
+      font-weight: bold;
+      color: #eeeeec; }
 
 .calendar-other-month-day {
   color: rgba(238, 238, 236, 0.3);
+  border-radius: 99px;
   opacity: 1; }
+  .calendar-other-month-day:hover {
+    color: #000000;
+    opacity: 1; }
 
 .calendar-week-number {
   color: rgba(238, 238, 236, 0.85);
@@ -809,7 +961,7 @@ StScrollBar {
   background-color: #23252e;
   border: 1px solid #13151a;
   border-radius: 6px;
-  padding: 0; }
+  padding: 5px 10px; }
   .modal-dialog > StBoxLayout:first-child {
     padding: 10px; }
   .modal-dialog-button-box {
@@ -822,6 +974,11 @@ StScrollBar {
       padding-top: 0;
       padding-bottom: 0;
       height: 30px; }
+  .modal-dialog .confirm-dialog-title {
+    text-align: center;
+    font-weight: bold;
+    font-size: 1.3em;
+    padding-bottom: 12px; }
 
 .run-dialog {
   padding: 10px 15px 10px 15px;
@@ -831,10 +988,17 @@ StScrollBar {
   .run-dialog > * {
     padding: 0; }
   .run-dialog-label {
-    font-size: 0;
+    font-size: 1.3em;
     font-weight: bold;
     color: #eeeeec;
-    padding-bottom: 0; }
+    padding-bottom: 15px;
+    text-align: center; }
+  .run-dialog-description {
+    color: #eeeeec;
+    padding-top: 15px;
+    text-align: center; }
+    .run-dialog-description.error {
+      color: #bf1717; }
   .run-dialog-error-label {
     color: #bf1717; }
   .run-dialog-error-box {
@@ -846,6 +1010,7 @@ StScrollBar {
     font-size: 1em; }
   .run-dialog-entry {
     width: 21em;
+    height: 1.2em;
     padding: 7px;
     border-radius: 6px;
     caret-color: white;
@@ -918,7 +1083,7 @@ StScrollBar {
 
 .magnifier-zoom-region {
   border: 2px solid maroon; }
-  .magnifier-zoom-region.full-screen {
+  .magnifier-zoom-region .full-screen {
     border-width: 0px; }
 
 #keyboard {
@@ -1236,7 +1401,7 @@ StScrollBar {
 
 .grouped-window-list-number-label {
   z-index: 99;
-  color: #d0d0d0; }
+  color: rgba(255, 255, 255, 0.1); }
 
 .grouped-window-list-badge {
   border-radius: 256px;
