--- a/src/sass/gtk3/_applications.scss
+++ b/src/sass/gtk3/_applications.scss
@@ -213,9 +213,12 @@ list.tweak-categories separator {
     border: 0;
     border-radius: 8px;
     box-shadow: inset 0 0 10px $shadow_color;
-    background: $_dark_bg;
     padding: 7px 10px;
     margin: 0 5px;
+
+    &, iconview:not(:hover):not(:focus) {
+      background: $_dark_bg;
+    }
 
     treeview {
       background: transparent;
